# oss-release-io-solution

./: .coverage  .gitignore  Contributing.md  Dockerfile  README.md  navbar.md  pylintrc  pyproject.toml
Documentation/: README.md  efk_document.md  gen_cert.md
cicd/jenkinsfiles/bfa/: Jenkinsfile
cicd/jenkinsfiles/bfa_app_prod_setup/: Jenkinsfile
cicd/jenkinsfiles/data_view/: Jenkinsfile
cicd/jenkinsfiles/dbascode_setup/: Jenkinsfile
cicd/jenkinsfiles/e2e_dora_setup/: Jenkinsfile
cicd/jenkinsfiles/elk_backup_setup/: Jenkinsfile
cicd/jenkinsfiles/elk_child_dora_reg/: Jenkinsfile
cicd/jenkinsfiles/elk_child_dora_scan/: Jenkinsfile
cicd/jenkinsfiles/elk_dora_reg_test/: Jenkinsfile
cicd/jenkinsfiles/elk_dora_register/: Jenkinsfile
cicd/jenkinsfiles/elk_dora_scan/: Jenkinsfile
cicd/jenkinsfiles/elk_dora_scan_test/: Jenkinsfile
cicd/jenkinsfiles/grafana_prometheus_setup/: Jenkinsfile
cicd/jenkinsfiles/grafana_prometheus_setup_test/: jenkinsfile
cicd/jenkinsfiles/jira_setup/: Jenkinsfile
cicd/jenkinsfiles/mongo_data_validation/: Jenkinsfile
cicd/jenkinsfiles/mttr_app/: Jenkinsfile
cicd/jenkinsfiles/mttr_prod/: Jenkinsfile
cicd/jenkinsfiles/ndjson_kibana_setup/: Jenkinsfile
cicd/jenkinsfiles/precode-test/: Jenkinsfile
cicd/rulesets/: precode-test.yaml  precode.yaml  release.yaml  releasetest.yaml
oris/: __main__.py
oris/ELK_Documentation_and_Diagrams/: README.md
oris/elk/: __main__.py
oris/elk/src/: app_cli.py
oris/elk_dockerfile/: Dockerfile
oris/src/: app_cli.py  configuration.py
python3_pre_code_review/: Dockerfile
(+183 files in other folders)
